feat: Add authenticate
