# src/config/swagger.yaml
@@ -84,3 +84,42 @@ paths:
       responses:
         "200":
           description: login successfully
+  /user:
+    get:
+      tags:
+        - Userwe
+      description: Get information about a logged-in user
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Successfully retrieved user information
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                  avatar:
+                    type: string
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Unauthorized"
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Internal Server Error"
